--- a/Data/SameSurface/SameSurfaceRound SF .html
+++ b/Data/SameSurface/SameSurfaceRound SF .html
@@ -1,5 +1,5 @@
 
-<table style="border-collapse:collapse;" class=table_3039 border=1>
+<table style="border-collapse:collapse;" class=table_2991 border=1>
 <thead>
 <tr>
   <th id="tableHTML_header_1"> </th>
@@ -13,121 +13,121 @@
   <td id="tableHTML_rownames">1</td>
   <td id="tableHTML_column_1">Roger Federer</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">98</td>
+  <td id="tableHTML_column_3">137</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">2</td>
   <td id="tableHTML_column_1">Guillermo Vilas</td>
   <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">77</td>
+  <td id="tableHTML_column_3">107</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">3</td>
   <td id="tableHTML_column_1">Novak Djokovic</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">76</td>
+  <td id="tableHTML_column_3">100</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">4</td>
   <td id="tableHTML_column_1">Andre Agassi</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">69</td>
+  <td id="tableHTML_column_3">99</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">5</td>
   <td id="tableHTML_column_1">Jimmy Connors</td>
-  <td id="tableHTML_column_2">Carpet</td>
-  <td id="tableHTML_column_3">67</td>
+  <td id="tableHTML_column_2">Hard</td>
+  <td id="tableHTML_column_3">94</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">6</td>
-  <td id="tableHTML_column_1">Rafael Nadal</td>
-  <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">67</td>
+  <td id="tableHTML_column_1">Jimmy Connors</td>
+  <td id="tableHTML_column_2">Carpet</td>
+  <td id="tableHTML_column_3">89</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">7</td>
   <td id="tableHTML_column_1">Manuel Orantes</td>
   <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">61</td>
+  <td id="tableHTML_column_3">86</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">8</td>
-  <td id="tableHTML_column_1">John McEnroe</td>
-  <td id="tableHTML_column_2">Carpet</td>
-  <td id="tableHTML_column_3">57</td>
+  <td id="tableHTML_column_1">Rafael Nadal</td>
+  <td id="tableHTML_column_2">Hard</td>
+  <td id="tableHTML_column_3">79</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">9</td>
-  <td id="tableHTML_column_1">Jimmy Connors</td>
-  <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">56</td>
+  <td id="tableHTML_column_1">Rafael Nadal</td>
+  <td id="tableHTML_column_2">Clay</td>
+  <td id="tableHTML_column_3">76</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">10</td>
-  <td id="tableHTML_column_1">Ivan Lendl</td>
-  <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">53</td>
+  <td id="tableHTML_column_1">John McEnroe</td>
+  <td id="tableHTML_column_2">Carpet</td>
+  <td id="tableHTML_column_3">73</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">11</td>
   <td id="tableHTML_column_1">Andy Murray</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">53</td>
+  <td id="tableHTML_column_3">70</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">12</td>
-  <td id="tableHTML_column_1">Ivan Lendl</td>
-  <td id="tableHTML_column_2">Carpet</td>
-  <td id="tableHTML_column_3">49</td>
+  <td id="tableHTML_column_1">Stefan Edberg</td>
+  <td id="tableHTML_column_2">Hard</td>
+  <td id="tableHTML_column_3">68</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">13</td>
   <td id="tableHTML_column_1">Pete Sampras</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">48</td>
+  <td id="tableHTML_column_3">68</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">14</td>
-  <td id="tableHTML_column_1">Rafael Nadal</td>
+  <td id="tableHTML_column_1">Ivan Lendl</td>
   <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">47</td>
+  <td id="tableHTML_column_3">66</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">15</td>
-  <td id="tableHTML_column_1">Ilie Nastase</td>
-  <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">45</td>
+  <td id="tableHTML_column_1">Andy Roddick</td>
+  <td id="tableHTML_column_2">Hard</td>
+  <td id="tableHTML_column_3">65</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">16</td>
-  <td id="tableHTML_column_1">Thomas Muster</td>
-  <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">45</td>
+  <td id="tableHTML_column_1">Michael Chang</td>
+  <td id="tableHTML_column_2">Hard</td>
+  <td id="tableHTML_column_3">63</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">17</td>
-  <td id="tableHTML_column_1">Stefan Edberg</td>
-  <td id="tableHTML_column_2">Hard</td>
-  <td id="tableHTML_column_3">44</td>
+  <td id="tableHTML_column_1">Ivan Lendl</td>
+  <td id="tableHTML_column_2">Carpet</td>
+  <td id="tableHTML_column_3">61</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">18</td>
-  <td id="tableHTML_column_1">Arthur Ashe</td>
-  <td id="tableHTML_column_2">Carpet</td>
-  <td id="tableHTML_column_3">42</td>
+  <td id="tableHTML_column_1">Ilie Nastase</td>
+  <td id="tableHTML_column_2">Clay</td>
+  <td id="tableHTML_column_3">60</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">19</td>
-  <td id="tableHTML_column_1">Ivan Lendl</td>
+  <td id="tableHTML_column_1">Thomas Muster</td>
   <td id="tableHTML_column_2">Clay</td>
-  <td id="tableHTML_column_3">39</td>
+  <td id="tableHTML_column_3">59</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">20</td>
-  <td id="tableHTML_column_1">Boris Becker</td>
+  <td id="tableHTML_column_1">Arthur Ashe</td>
   <td id="tableHTML_column_2">Carpet</td>
-  <td id="tableHTML_column_3">37</td>
+  <td id="tableHTML_column_3">56</td>
 </tr>
 </tbody>
 </table>
