--- a/Data/Index.html
+++ b/Data/Index.html
@@ -113,7 +113,7 @@
 <td style="border-bottom: 1px solid #000000; width: 77px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Entries/EntriesCategory.html">E</a></span></u></td>
 <td style="border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Entries/EntriesTournament.html">E</a></span></u></td>
 <td style="width: 85px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
-<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span><a href="./SameTournament/SameTournamentEntries.html">E</a></span></u></td>
 <td style="width: 71px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
