--- a/Data/Index.html
+++ b/Data/Index.html
@@ -113,8 +113,8 @@
 <td style="border-bottom: 1px solid #000000; width: 77px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Entries/EntriesCategory.html">E</a></span></u></td>
 <td style="border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Entries/EntriesTournament.html">E</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
-<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span><a href="./SameTournament/SameTournamentEntries.html">E</a></span></u></td>
-<td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceEntries.html">E</a></span></td>
+<td style="border-top: 1px solid #000000;width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span><a href="./SameTournament/SameTournamentEntries.html">E</a></span></u></td>
+<td style="border-top: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceEntries.html">E</a></span></td>
 <td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 </tr>
@@ -126,8 +126,8 @@
 <td style="border-bottom: 1px solid #000000; width: 77px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./Youngest/YoungestEntriecategoryByAge W .html">W</a><br /></span></td>
 <td style="border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Youngest/YoungestEntrieTourByAge W .html">W</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
-<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
-<td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-top: 1px solid #000000; width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-top: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 </tr>
