--- a/Data/Index.html
+++ b/Data/Index.html
@@ -30,7 +30,7 @@
 <td style="border-top: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Count/CountTour W .html">W</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound W .html">W</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound W .html">W</a></span></td>
-<td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSeason/SameSeasonRound W .html">W</a></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border-left: 1px solid #000000; border-right: 1px solid #000000; width: 65px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">F</span></td>
@@ -40,7 +40,7 @@
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Count/CountTour F .html">F</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound F .html">F </a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound F .html">F</a></span></td>
-<td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span><a href="./SameSeason/SameSeasonRound F .html">F</a></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border-left: 1px solid #000000; border-right: 1px solid #000000; width: 65px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">SF</span></td>
@@ -50,7 +50,7 @@
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Count/CountTour SF .html">SF</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound SF .html">SF</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound SF .html">SF</a></span></td>
-<td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSeason/SameSeasonRound SF .html">SF</a></span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 </tr>
 <tr style="height: 21px;">
@@ -61,7 +61,7 @@
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Count/CountTour QF .html">QF</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound QF .html">QF</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound QF .html">QF</a></span></td>
-<td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSeason/SameSeasonRound QF .html">QF</a></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border-left: 1px solid #000000; border-right: 1px solid #000000; width: 65px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">R16</span></td>
@@ -71,7 +71,7 @@
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Count/CountTour R16 .html">R16</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound R16 .html">R16</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound R16 .html">R16</a></span></td>
-<td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSeason/SameSeasonRound R16 .html">R16</a></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border-left: 1px solid #000000; border-right: 1px solid #000000; width: 65px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">R32</span></td>
@@ -81,6 +81,7 @@
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><a href="./Count/CountTour R32 .html"><span style="color: #0563c1;">R32</span></a></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./SameTournament/SameTournamentRound R32 .html">R32</a></span></u></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSurface/SameSurfaceRound R32 .html">R32</a></span></td>
+<td style="border-right: 1px solid #000000; width: width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameSeason/SameSeasonRound R32 .html">R32</a></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border: 1px solid #000000; width: 71px; height: 21px;" align="center" valign="bottom" height="20"><strong><span style="color: #000000;">Percentage</span></strong></td>
