--- a/Data/Index.html
+++ b/Data/Index.html
@@ -17,9 +17,9 @@
 <td style="border: 1px solid #000000; width: 59px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">On Hard</span></td>
 <td style="border: 1px solid #000000; width: 77px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">Slam</span></td>
 <td style="border: 1px solid #000000; width: 81px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">Current Tour</span></td>
-<td style="border: 1px solid #000000; width: 78px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">in same tour</span></td>
+<td style="border: 1px solid #000000; width: 71px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">In same tour</span></td>
 <td style="border: 1px solid #000000; width: 71px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">In same surface</span></td>
-<td style="border: 1px solid #000000; width: 137px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">In same season<br /></span></td>
+<td style="border: 1px solid #000000; width: 71px; height: 41px;" align="center" valign="bottom"><span style="color: #000000;">In same season<br /></span></td>
 </tr>
 <tr style="height: 21px;">
 <td style="border-bottom: 1px solid #000000; border-left: 1px solid #000000; border-right: 1px solid #000000; width: 71px; height: 147px; border-style: solid;" rowspan="6" align="center" valign="bottom" height="140"><strong><span style="color: #000000;">Count</span></strong></td>
