Added wins in the same tour

--- a/Data/Index.html
+++ b/Data/Index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Tennismylife</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <script type="text/javascript">
-        </script>
-    </head>
-
 <p>&nbsp;</p>
+<div>
 <p>&nbsp;</p>
+</div>
+<div>
+<p>&nbsp;</p>
+</div>
+<div>
 <table style="height: 881px; width: 858px;" border="0" cellspacing="0"><colgroup width="81"></colgroup> <colgroup width="67"></colgroup> <colgroup width="75"></colgroup> <colgroup width="68"></colgroup> <colgroup width="92"></colgroup> <colgroup width="90"></colgroup> <colgroup width="103"></colgroup> <colgroup width="93"></colgroup> <colgroup width="79"></colgroup> <colgroup width="157"></colgroup> <colgroup width="68"></colgroup>
 <tbody>
 <tr style="height: 21px;">
@@ -549,7 +546,7 @@
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; width: 59px; height: 21px;" align="center" valign="bottom"><a href="./Played/Played Carpet .html">Carpet</a></td>
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; width: 77px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Played/PlayedCategory.html">1</a></span></u></td>
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><a href="./Played/PlayedTour.html">2</a></td>
-<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameTournament/SameTournamentPlayed.html">P</a>&nbsp;</span></td>
 <td style="border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
@@ -564,14 +561,18 @@
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; width: 59px; height: 21px;" align="center" valign="bottom">&nbsp;</td>
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; width: 77px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Wins/WinsCategory.html">3</a></span></u></td>
 <td style="border-top: 1px solid #000000; border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><u><span style="color: #0563c1;"><a href="./Wins/WinsTour.html">4</a></span></u></td>
-<td style="border-bottom: 1px solid #000000; width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
+<td style="border-bottom: 1px solid #000000; width: 78px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;"><a href="./SameTournament/SameTournamentWins.html">W</a>&nbsp;</span></td>
 <td style="border-bottom: 1px solid #000000; border-right: 1px solid #000000; width: 81px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 137px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 <td style="width: 66px; height: 21px;" align="center" valign="bottom"><span style="color: #000000;">&nbsp;</span></td>
 </tr>
 </tbody>
 </table>
+</div>
+<ul>
 <li><a href="silly.R">Update</a></li>
+</ul>
 <!-- ************************************************************************** -->
+<div>
 <p>&nbsp;</p>
-
+</div>
