--- a/Data/Played/PlayedTour.html
+++ b/Data/Played/PlayedTour.html
@@ -1,5 +1,5 @@
 
-<table style="border-collapse:collapse;" class=table_4301 border=1>
+<table style="border-collapse:collapse;" class=table_2620 border=1>
 <thead>
 <tr>
   <th id="tableHTML_header_1"> </th>
@@ -21,7 +21,7 @@
 <tr>
   <td id="tableHTML_rownames">3</td>
   <td id="tableHTML_column_1">Rafael Nadal</td>
-  <td id="tableHTML_column_2">75</td>
+  <td id="tableHTML_column_2">76</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">4</td>
@@ -95,18 +95,18 @@
 </tr>
 <tr>
   <td id="tableHTML_rownames">18</td>
-  <td id="tableHTML_column_1">Marin Cilic</td>
+  <td id="tableHTML_column_1">Fernando Verdasco</td>
   <td id="tableHTML_column_2">42</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">19</td>
-  <td id="tableHTML_column_1">Wally Masur</td>
+  <td id="tableHTML_column_1">Gael Monfils</td>
   <td id="tableHTML_column_2">42</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">20</td>
-  <td id="tableHTML_column_1">Fernando Verdasco</td>
-  <td id="tableHTML_column_2">41</td>
+  <td id="tableHTML_column_1">Marin Cilic</td>
+  <td id="tableHTML_column_2">42</td>
 </tr>
 </tbody>
 </table>
